Closed Bug 369318 Opened 19 years ago Closed 19 years ago

3 inline-table reftests fail on mac due to pixel rounding

Categories

(Core :: Layout: Tables, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

(Whiteboard: [patch])

Attachments

(1 file, 1 obsolete file)

Three of the inline-table reftests fail on Mac, which has sub-pixel positioning and sizing of text. The problem is that the text following the inline-table in tests bugs/18217-basic-2a.html, bugs/18217-basic-2b.html, and bugs/18217-valign-1.html is slightly too far from the inline-table. The problematic part of the frame dump shows that the "bcd" text is 347 twips wide, but the table cell's inner block sizes to 360 twips around it. I'd thought bug 349297 would fix this, but it doesn't seem to be sufficient. I think an additional patch is needed.
Assignee: nobody → dbaron
OS: Linux → Mac OS X
Hardware: PC → Macintosh
Whiteboard: [patch]
Summary: 3 inline-table reftests fail on mac → 3 inline-table reftests fail on mac due to pixel rounding
Attached patch patch (obsolete) — Splinter Review
Attachment #253997 - Flags: superreview?(roc)
Attachment #253997 - Flags: review?(bernd_mozilla)
Attachment #253997 - Flags: superreview?(roc) → superreview+
David is this equivalent to not pixel round inside the BasicTableLayoutStrategy?
Yes. I want to get rid of the pixel rounding. I don't see any good reason for it, and it's harmful in cases where platforms can do subpixel rendering or where we're doing things like zooming.
Blocks: 365748
Comment on attachment 253997 [details] [diff] [review] patch I only remember that OS2 was keen to get the pixel rounding that might not be an issue anymore given the transition to cairo.
Attachment #253997 - Flags: review?(bernd_mozilla) → review+
Attached patch patchSplinter Review
Merged with bug 177805.
Attachment #253997 - Attachment is obsolete: true
Checked in to trunk, 2007-02-08 11:21 -0800.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Already tested by the failing tests.
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: