Stop rounding widths to pixel boundaries to fix reftest failures on Mac, which does subpixel positioning and sizing of text.  b=369318  r=bernd  sr=roc